--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "prettier": "^2.2.1",
+    "sanitize.css": "^12.0.1",
+    "sass": "^1.32.7",
     "typescript": "^4.1.5"
   }
 }
